# ComputerGraph

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md
.cache/clangd/index/: 3dview.c.4A7C5EA6265A6B40.idx  CallbackMaker.c.EBBEAFD9EA335544.idx  GLBatch.h.F7E32F67E07FE963.idx  GLBatchBase.h.F7F3F77DC76BB7F7.idx  GLShaderManager.h.0BC983695090290B.idx  GLTools.cpp.0864FA636FFB4EB0.idx  GLTools.h.9649B4360D8B4353.idx  GLTriangleBatch.h.B83F4D68CE23A8E7.idx  fg_callback_macros.h.4348E55C697585BD.idx  fg_callbacks.c.F773637FDBA0CEC2.idx  fg_cmap_x11.c.C7A848113FC62771.idx  fg_cursor.c.B4974F0CD41248BC.idx  fg_cursor_x11.c.E9DB4D6BB0C060F7.idx  fg_display.c.10204D9343DC7790.idx  fg_display_x11_glx.c.C3DAE6DD1AAA8315.idx  fg_ext.c.C385ECCF67F2C93B.idx  fg_ext_x11.c.7C408EE139434312.idx  fg_font.c.021CE99C751EF05C.idx  fg_font_data.c.71F3A6E0032F9E47.idx  fg_gamemode.c.DE6E1341E0AB5ADF.idx  fg_gamemode_x11.c.7F74854323219D47.idx  fg_geometry.c.89379ACACC498DF5.idx  fg_gl2.c.0CE9B479DC7CFFB0.idx  fg_gl2.h.38B0D152EFE7EEE1.idx  fg_glutfont_definitions_x11.c.13E0D1997D287DB6.idx  fg_init.c.DCAC4E8CE5750F92.idx  fg_init.h.C59DE7E2A7B5178A.idx  fg_init_egl.h.6C084290423E9ABB.idx  fg_init_x11.c.94C70D311956F2D4.idx  fg_input_devices.c.CF85D9844F616BA1.idx  fg_input_devices_x11.c.02F15EF96A646758.idx  fg_internal.h.752391698BA955B8.idx  fg_internal_x11.h.8A94AFEAB8D9F467.idx  fg_internal_x11_glx.h.B7585312BF4C7380.idx  fg_joystick.c.8D36D65D54C944B1.idx  fg_joystick_x11.c.70C3A6E5CA719A61.idx  fg_main.c.18B67D93737C0F5F.idx  fg_main_x11.c.745FDBD2F84F085E.idx  fg_menu.c.9B93D9CE068619B2.idx  fg_menu_x11.c.27DFD0CB88AE503B.idx  (+55 more)
.github/workflows/: build.yml  release.yml
include/: NiuBiObject.hpp  myglTransform.h  myglTransfrom.h  obj.hpp  utils.h
src/: global.c  global.h  loader.cpp  loader.hpp  main.c  main.cpp  shadow.cpp  utils.c
